--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
@@ -36,6 +37,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
     "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/uuid": "^9.0.8",
     "husky": "^8.0.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
@@ -43,9 +45,7 @@
   },
   "engines": {
     "node": ">=16.0.0",
-    "yarn": ">=1.22.19",
-    "npm": "please-use-yarn",
-    "pnpm": "please-use-yarn"
+    "yarn": ">=1.22.17"
   },
   "engineStrict": true,
   "prettier": {
